overflow fix

--- a/Website/src/style/input.css
+++ b/Website/src/style/input.css
@@ -5,7 +5,7 @@
 @layer {
   html,
   body {
-    @apply m-0 p-0 text-gray-500;
+    @apply m-0 p-0 text-gray-500 overflow-x-hidden;
   }
 
   p {
